Fixed add task button z-index to have the filter menu above it. Fixed language bar

--- a/src/views/components/header/header.scss
+++ b/src/views/components/header/header.scss
@@ -11,9 +11,16 @@
 
   .header-side {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
+    &.lang-en {
+      flex-direction: row;
+    }
+    
+    &.lang-he {
+      flex-direction: row;
+    }
 
     a {
       &:hover {
@@ -41,7 +48,6 @@
     }
 
     .project-title {
-      float: left;
       font-size: rem(14px);
     }
   }
@@ -62,11 +68,9 @@
 
   .lang-he {
     direction: ltr;
-    float: right;
   }
   .lang-en {
     direction: ltr;
-    float: right;
   }
 
   .language-buttons-wrapper {
@@ -75,45 +79,6 @@
     }
   }
 }
-
-.header-title {
-  margin: 0 0 0 0;
-  align-items: center;
-  direction: ltr;
-  padding-right: 6px;
-
-  float: left;
-  font-size: rem(14px);
-  font-weight: 400;
-  text-rendering: auto;
-  transform: translate(0,0);
-
-  &:before {
-    display: inline-block;
-    border: 2px solid #eb1478;
-    margin-right: 8px;
-    margin-left: 8px;
-    border-radius: 100%;
-    height: 1em;
-    width: 1em;
-    content: ' ';
-  }
-
-  a {
-    color: black;
-    transition: all .2s ease;
-
-    &:hover {
-      color: $primary-color;
-    }
-
-    &.active {
-      color: $primary-color;
-      border-bottom: 4px solid $primary-color;
-    }
-  }
-}
-
 
 @media (max-width: 767px) {
   .header {
