--- a/src/views/molecules/top-nav/top-nav.scss
+++ b/src/views/molecules/top-nav/top-nav.scss
@@ -13,12 +13,12 @@
   box-shadow: 0px 4px 4px  rgba(103, 67, 155, 0.16);
 
   .add-task-button {
+    z-index: 800;
     display: flex;
     position: fixed;
     bottom: 30px;
     right: 20px;
     font-size: 16px;
-    z-index: 2000;
     background-color: $primary-color;
     color: white;
     -webkit-box-shadow: 0px 4px 4px rgba(68, 44, 102, 0.5);
